# qscruncher

./: README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt
.github/workflows/: test.yml
django_integration_test/django_test_project/django_test_app/: models.py
django_integration_test/django_test_project/django_test_app/migrations/: 0002_alter_testmodel_foreign_key_and_more.py
django_integration_test/django_test_project/django_test_project/: asgi.py
django_integration_tests/: tests.py
django_integration_tests/django_test_project/django_test_app/: apps.py
django_integration_tests/django_test_project/django_test_app/migrations/: 0001_initial.py  0003_reversemodel.py
django_integration_tests/django_test_project/django_test_project/: settings.py  urls.py  wsgi.py
src/qscruncher/: __init__.py  qscruncher.py
